syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";

message Round1 {
  	repeated bytes alphas = 1;
  	repeated bytes betas = 2;
	
	repeated EqualsOneOfTwo proofs = 3;
	DiscreteLogEquality proof = 4;
}